Fix T85287: Cycles deadlock loading Blender images in some cases